Update README.md and add .jar