@@ -1,8 +1,10 @@
 # A Mage's Return
 
 [![Java](https://img.shields.io/badge/java-20-orange)]()
-[![License MIT](https://img.shields.io/badge/license-MIT-blue)](https://github.com/okkinn/A-Mages-Return/blob/main/LICENSE.txt)
 [![JavaFX](https://img.shields.io/badge/javafx-20-orange)]()
+[![Eclipse](https://img.shields.io/badge/eclipse-4.28-%23291c55)]()
+[![License MIT](https://img.shields.io/badge/license-MIT-blue)](https://github.com/okkinn/A-Mages-Return/blob/main/LICENSE.txt)
+
 
 A Mage's Return is a Java-based shooter game developed using the JavaFX library as a mini-project for CMSC 22. It was developed to practice the design and application of OOP concepts-Abstraction, Encapsulation, Inheritance, and Polymorphism-in a working project.
 
@@ -19,25 +21,75 @@ Embark on a magical journey in "A Mage's Return," an shooter action game that fo
 
 ## Installation
 
-What are the steps required to install your project? Provide a step-by-step description of how to get the development environment running.
+1. Install the latest Java JDK
+2. Download and install [Eclipse IDE (recommended version 4.28.0)](https://www.eclipse.org/external/eclipse/downloads/drops4/R-4.28-202306050440/)
+3. Install e(fx)clipse through the Eclipse Marketplace (Eclipse -> Help -> Eclipse Marketplace)
+4. To create and run JavaFX projects follow the instructions [here](https://openjfx.io/openjfx-docs/#install-javafx)
+5. Import the project (File -> Open Projects from File System)
+6. Right click on the project, hover to Build Path, and click Configure Build Path
+7. Click Modulepath and add a user library (the library you created from Step 4)
 
 ## Usage
 
-Provide instructions and examples for use. Include screenshots as needed.
-
-To add a screenshot, create an `assets/images` folder in your repository and upload your screenshot to it. Then, using the relative filepath, add it to your README using the following syntax:
-
-    ```md
-    ![alt text](assets/images/screenshot.png)
-    ```
+To run the game through the terminal:
+```
+    java --module-path "<path-to-javafx-sdk>" --add-modules javafx.controls -jar A-Mages-Return.jar
+```
 
 ## Credits
 
-List your collaborators, if any, with links to their GitHub profiles.
+References
+https://openjfx.io/openjfx-docs/#install-javafx
+https://docs.oracle.com/javafx/2/api/
+https://docs.oracle.com/javase/8/javafx/api/overview-summary.html
+https://stackoverflow.com/questions/28382371/how-to-set-a-text-inside-a-button-to-drop-the-shadow-in-javafx
+https://stackoverflow.com/questions/23325488/add-timer-for-images-in-javafx
+https://stackoverflow.com/questions/33620587/how-to-include-resource-folders-in-javafx-deployment
+https://stackoverflow.com/questions/21936585/transparent-background-of-a-textarea-in-javafx-8
+https://gamedev.stackexchange.com/questions/168035/javafx-how-do-i-create-a-health-bar
+https://www.youtube.com/watch?v=N2EmtYGLh4U
 
-If you used any third-party assets that require attribution, list the creators with links to their primary web presence in this section.
+Font
+https://www.dafont.com/ancient-modern-tales.font
 
-If you followed tutorials, include links to those here as well.
+Image Sources
+Backgrounds
+Menu Background
+https://www.deviantart.com/zedotagger/art/FF-Black-Mage-648585416
+
+Map/Tileset
+https://ansimuz.itch.io/patreons-top-down-collection
+
+Winning Scene Background
+https://medium.com/ph-d-stories/castles-and-dreams-or-robots-28cddc08207f?responsesOpen=true&sortBy=REVERSE_CHRON
+
+Sprites
+Mage Player
+https://greenpixels.itch.io/pixel-art-assets-5
+
+Bat
+https://elthen.itch.io/bat-sprite-pack
+
+Arcane Archer
+https://astrobob.itch.io/arcane-archer
+
+Fireball
+https://nyknck.itch.io/pixelarteffectfx017
+
+Teleportation Portal
+https://pimen.itch.io/magical-animation-effects
+
+Hotbar
+https://mounirtohami.itch.io/pixel-art-gui-elements
+
+Health & Mana Icons
+https://hochupitsu.itch.io/heart-and-mana
+
+Coin
+https://laredgames.itch.io/gems-coins-free
+
+Potions
+https://admurin.itch.io/admurins-potions
 
 ## License
 
